# travelClaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: deploy-crawler.md  tripadvisor_geo_crawler_plan.md
docs/research/: album_overview_probe.json  album_overview_raw.json  album_probe_iceland.json  album_probe_v2.json  full_harvest_iceland.json  locphotos_html_mine.json  node_structure.json  pagination_truth.json  scale_stress_paris.json  tripadvisor_gallery_pagination_findings.md  tripadvisor_review_photos_findings.md
scripts/: view-crawler-logs.sh  view-crawler-status.sh
seeds/: destinations.expanded.csv  destinations.sample.csv  destinations.supplemental.csv  destinations.supplemental.round2.csv
src/travelclaw_ta_geo/: __init__.py  city_runner.py  cli.py  crawler.py  monitor.py  orchestrator.py  paths.py  preheat.py  progress.py  seeds.py  settings.py  state.py
src/travelclaw_ta_geo/output/: manifest.py  package.py  writers.py
src/travelclaw_ta_geo/storage/: r2.py
src/travelclaw_ta_geo/tripadvisor/: detail.py  discovery.py  graphql.py  http.py  media.py  models.py  parsing.py
tests/: test_geo_record.py  test_graphql.py  test_http.py  test_media.py  test_orchestrator.py  test_package.py  test_parsing.py  test_progress_state.py  test_seeds.py
