[project]
name = "travelclaw-ta-geo"
version = "0.1.0"
description = "Tripadvisor geo crawler and R2 delivery packager for TravelClaw"
authors = [{ name = "frank", email = "imshuazi@126.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "boto3>=1.35",
    "ImageHash>=4.3",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "scrapling[all]>=0.4.3",
    "typer>=0.15",
]

[project.scripts]
travelclaw-ta-geo = "travelclaw_ta_geo.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travelclaw_ta_geo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008", "E501"]
